--- a/style.css
+++ b/style.css
@@ -545,17 +545,12 @@ img {
     }
 }
 .intel-section{
-    width: 1349px;
+    position: relative;
+    /* width: 1349px; */
     border: 1px solid red;
+    width: 100%;
     height: 400px;
-}
-.ad{
-    /* width: 400px; */
-    /* height: 400px; */
-    padding: 5px;
-    object-fit: cover;
-    border: 1px solid green;
-}
-.ad img{
-    width: 520px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
