--- a/style.css
+++ b/style.css
@@ -349,107 +349,11 @@ nav ul li:hover .magamenu1 {
     }
 }
 
-/* .layout {
-    width: 1349px;
-    display: grid;
-    grid-template-rows: repeat(auto-fit, 1fr);
-    grid-template-columns: repeat(3, 1fr);
-    padding: 10px 0px;
-    justify-content: center;
-    align-items: center;
-    margin: 0px auto;
-}
-
-.poster-main {
-    object-fit: cover;
-    padding: 5px;
-} */
 /* ------------ */
 .poster-main img {
     width: 405px;
 }
 
-/* .slide-container {
-    position: relative;
-    width: 1349px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px auto;
-}
-
-.slide {
-    width: 100%;
-}
-.arrow {
-    cursor: pointer;
-    position: absolute;
-    top: 45%;
-    color: black;
-    background-color: aliceblue;
-    padding: 8px 19px;
-    font-size: 25px;
-    font-weight: bold;
-}
-
-.next {
-    right: 0px;
-    border-radius: 3px 0 0 3px;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    user-select: none;
-    background-color: transparent;
-}
-
-.prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-
-.prev {
-    left: 0px;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    background-color: transparent;
-}
-
-.slide {
-    display: none;
-}
-
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-
-    to {
-        opacity: 4
-    }
-} */
 .mySlides {
     display: none;
     padding: 2px;
@@ -559,12 +463,6 @@ img {
     align-items: center;
 }
 
-/* .iposter {
-    width: 30%;
-    border: 1px solid yellow;
-    display: flex;
-    height: 400px;
-} */
 .slider {
     width: 100%;
     height: 200px;
@@ -624,10 +522,15 @@ img {
 /* ------- */
 .productH {
     display: flex;
+    max-width:1349px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .productA {
     width: 35%;
+    height: 460px;
     overflow: hidden;
 }
 
@@ -708,8 +611,9 @@ img {
 
 .productB-slider {
     width: 100%;
-    height: 350px;
+    height: 400px;
     display: none;
+    position: relative;
 }
 
 .holesys {
@@ -728,12 +632,11 @@ img {
     min-width: 24%;
     height: 75%;
     background: whitesmoke;
-    margin: 0 20px 0 0;
-    border-radius: 20px;
+    margin: 0 10px 0 0;
+    /* border-radius: 20px; */
     position: relative;
     left: 0;
     transition: 0.5s;
-
 }
 
 @media (max-width: 768px) {
@@ -781,17 +684,18 @@ img {
     font-weight: 700;
     text-transform: uppercase;
     color: #ccc;
-    margin-bottom: 18px;
+    margin-bottom: 10px;
 }
 
 .product h4 a {
     font-weight: 500;
     display: block;
-    margin-bottom: 18px;
+    margin-bottom: 10px;
     text-transform: uppercase;
     color: #363636;
     text-decoration: none;
     transition: 0.3s;
+    font-size: 12px;
 }
 
 .product h4 a:hover {
@@ -799,16 +703,16 @@ img {
 }
 
 .product p {
-    font-size: 15px;
+    font-size: 13px;
     line-height: 22px;
-    margin-bottom: 18px;
+    margin-bottom: 10px;
     color: #999;
 }
 
 .product-bottom-details {
     overflow: hidden;
     border-top: 1px solid #eee;
-    padding-top: 20px;
+    padding-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -839,31 +743,58 @@ img {
 
 .product-links button {
     display: inline-block;
-    margin-left: 5px;
     font-weight: 500;
     color: #000000;
     transition: 0.3s;
-    font-size: 15px;
-    font-weight: 600;
+    font-size: 10px;
+    font-weight: 700;
+    width: 100%;
     outline: none;
     border: none;
     background-color: #fbb72c;
-    padding: 10px 15px;
+    padding: 10px 5px;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
-.productB-pro{
-    position: relative;
-}
-.productB-pro .arr {
-	font-size: 40px;
-	cursor: pointer;
-	color: #ffffff;
-	width: 30px;
-	height: 30px;
-	display: inline-block;
-	line-height: 19px;
-	text-align: center;
-	border-radius: 3px;
-}
 
+.productB-pro .arr {
+    font-size: 40px;
+    cursor: pointer;
+    color: #000000;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    line-height: 19px;
+    text-align: center;
+    border-radius: 50%;
+    position: absolute;
+    background-color: #00000000;
+    z-index: 50;
+}
+.productB-pro .arr:hover{
+    background-color: #00000088;
+    color: #ccc;
+}
+.left {
+    left: 50;
+    z-index: 50;
+    margin-top: 200px;
+}
+.right {
+    right: 0;
+    z-index: 50;
+    margin-top: 200px;
+    margin-right: 10px;
+}
+.poster-2nd{
+    display: flex;
+    max-width:1349px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    border: 1px solid aqua;
+    padding: 10px;
+}
+.poster-2nd img{
+    width: 100%;
+}
