--- a/style.css
+++ b/style.css
@@ -110,23 +110,18 @@ form .fa-magnifying-glass {
     color: #000000;
 }
 
-
-
-.icon-part1 img {
-    width: 100%;
-    object-fit: contain;
-}
-
-.uicon {
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 50%;
+.icon-part1 {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    margin: 10px;
+    font-weight: 600;
 }
 
+.track-and-deals .fa {
+    font-size: 22px;
+
+}
+.track, .deals {
+    padding-left: 15px;
+}
 
 .logo img {
     width: 100px;
@@ -135,9 +130,9 @@ form .fa-magnifying-glass {
 nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 1rem 0px;
+    padding: 10px 0px;
     font-family: 'Prompt', sans-serif;
     font-weight: 600;
 }
@@ -145,12 +140,9 @@ nav {
 nav ul {
     list-style: none;
     display: flex;
-
 }
-
 nav li {
-    padding: 8px;
-    margin-left: 15px;
+    padding: 8px 10px;
 }
 
 nav a {
@@ -160,7 +152,58 @@ nav a {
     font-family: souptik;
     font-size: 20px;
 }
-
+.active{
+    background-color: rgba(248, 248, 255, 0);
+}
+nav ul li:hover .catagory-menu {
+    opacity: 1;
+    visibility: visible;
+    top: 70px;
+    transition: all .3s ease-in;
+}
+.catagory-menu{
+    width: 230px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(255, 123, 0);
+    transition: 1s;
+    position: absolute;
+    z-index: 99;
+    top: 90px;
+    left: 15px;
+    opacity: 0;
+    visibility: hidden;
+}
+.catagory-menu a{
+    padding: 15px;
+    cursor: pointer;
+    font-family: none;
+    background-color: rgb(255, 123, 0);
+    position: relative;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    /* border-bottom: 1px solid whitesmoke; */
+    text-decoration: none;
+    color: aliceblue;
+    font-weight: 600;
+}
+.catagory-menu a:hover{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
+.catagory-menu img{
+    width: 20px;
+    margin-right: 10px;
+}
+.na{
+    font-size: 15px;
+    width: 15px;
+}
+.arr-style{
+    position: absolute;
+    right: 7px;
+}
 .menu-dot {
     padding: 5px;
     display: flex;
@@ -182,10 +225,13 @@ nav a {
     visibility: hidden;
     height: 300px;
     left: 0px;
-    transition: 1s;
-    background-color: #6b70798f;
+    transition: .3s;
+    background: transparent;
+    backdrop-filter: blur(10px);
     display: flex;
     z-index: 99;
+    border-bottom: 3px solid white;
+    border-radius: 0 0 15px 15px;
 }
 
 .magamenu1-item1 {
@@ -195,7 +241,7 @@ nav a {
 
 .magamenu1-item1 a:hover {
     padding-left: 5px;
-    color: #355da1;
+    color: #d9ff00;
 }
 
 .magamenu1-item1 a {
@@ -205,8 +251,10 @@ nav a {
     padding: 0;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: rgba(128, 128, 128, 0.616);
+    color: rgb(255, 255, 255);
     font-family: none;
+    font-weight: 600;
+    font-size: 15px;
 }
 
 .magamenu1-item1 ul li {
@@ -215,6 +263,7 @@ nav a {
 
 .magamenu1-item1 h3 {
     padding-top: 10px;
+    color: #d9ff00;
 }
 
 .magamenu1-item1 ul {
@@ -227,6 +276,7 @@ nav ul li:hover .magamenu1 {
     opacity: 1;
     visibility: visible;
     top: 100%;
+    transition: all .3s ease-in;
 }
 
 .un {
@@ -541,7 +591,8 @@ img {
 .productB {
     width: 75%;
     padding: 5px;
-    background-color: #00002b;
+    /* background-color: #00002b; */
+    background: linear-gradient(90deg, rgba(6, 0, 101, 1) 0%, rgba(84, 9, 121, 1) 51%, rgba(0, 212, 255, 1) 100%);
 }
 
 .productB-header {
@@ -802,12 +853,14 @@ img {
 .poster-2nd-img {
     padding: 5px;
 }
+
 @media screen and (max-width: 500px) {
     .poster-2nd {
-      /* width: 100%; */
-      flex-direction: column;
+        /* width: 100%; */
+        flex-direction: column;
     }
-  }
+}
+
 /* .pi1{
     width: ;
 } */
