--- a/style1.css
+++ b/style1.css
@@ -2,11 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 60px;
+    /* padding: 5px 20px; */
     /* border: 1px solid red; */
     /* padding: 25px; */
 }
-
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px;
+    background-color: #a3a3a3;
+}
 #circule {
     width: 4px;
     height: 4px;
@@ -22,7 +28,6 @@
     background-color: #353535;
     margin-top: 3px;
     margin-left: 3px;
-
     border-radius: 5px;
 }
 
@@ -30,36 +35,61 @@
     display: flex;
 }
 
+.searchbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+}
+
+form {
+    background: whitesmoke;
+    width: 370px;
+    height: 50px;
+    display: flex;
+    border-radius: 30px;
+    border: 1px solid black;
+}
+
+form input {
+    flex: 1;
+    border: none;
+    outline: none;
+    background-color: #f5f5f5;
+}
+
+form .searchbar-btn {
+    background: rgb(245, 245, 245);
+    background: linear-gradient(90deg, rgba(245, 245, 245, 1) 0%, rgba(0, 212, 255, 1) 61%);
+    padding: 10px 20px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    outline: none;
+    border: none;
+    color: rgb(0, 0, 0);
+    letter-spacing: 1px;
+    cursor: pointer;
+    font: 1em sans-serif;
+    font-weight: 700;
+}
+
+form .fa-magnifying-glass {
+    align-self: center;
+    padding: 10px 20px;
+    color: #000000;
+}
 
 .down {
     padding-left: 60px;
-
-}
-
-.track-and-deals {
-    display: flex;
-    font-weight: 600;
-    margin-left: 130px;
-}
-
-.track-and-deals .fa {
-    font-size: 22px;
-
 }
 
 .down-fa {
     padding-left: 5px;
 }
 
-.deals {
-    padding-left: 15px;
-}
-
 #navbar a {
     text-decoration: none;
     color: #353535;
-    /* padding: 25px; */
-    /* font-weight: 500; */
 }
 
 #navbar li {
@@ -67,27 +97,21 @@
 }
 
 .browser-catagorey-details {
-    /* border: 1px solid red; */
     padding-left: 8px;
     font-weight: 600;
     padding-top: 2px;
 }
-
+/* .navlinks{
+    margin: 0px 20px;
+} */
 .navlinks ul {
     display: flex;
-
-}
-
-.navlinks {
-    /* border: 1px solid black; */
-    padding-left: 10px;
-    /* padding: 25px; */
+    padding: 0px;
+    margin: 0px 47.5px;
 }
 
 .navlinks ul li a {
     margin: 0px 15px;
-    /* border: 1px solid blue; */
-    /* padding: 10px; */
     font-weight: 600;
     color: #353535;
 }
@@ -101,17 +125,37 @@
     position: relative;
 }
 
+.browser-catagorey:hover>.categorey-box {
+    max-height: 451px;
+    opacity: 1;
+    visibility: visible;
+    transition: all .3s ease-in;
+}
+
 .categorey-box {
     position: absolute;
     background-color: rgb(255, 255, 255);
     margin-top: 39px;
+    /* height: 451px; */
     width: 100%;
     left: 0;
     display: flex;
     flex-direction: column;
     z-index: 99;
-    /* border: 10px solid rgb(235, 7, 7); */
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+    visibility: hidden;
+    opacity: 0;
+    transition: 1s;
+}
 
+/* .categorey-box.open-categorey-box {
+    max-height: 451px;
+} */
+.categorey-box img {
+    width: 20px;
+    padding-right: 10px;
 }
 
 .categorey-box a {
@@ -119,17 +163,185 @@
     border-bottom: 1px solid #ececec;
     color: #4a4a4a;
     font-size: 15px;
-    font-weight: 500;
-    /* padding-bottom: 0; */
+    font-weight: 700;
+    display: flex;
+    position: relative;
+    transition: transform 0.5s;
+}
+.categorey-box a:hover .rarr{
+    transform: translateX(5px);
+}
+.categorey-box a:hover{
+    transform: scale(0.9);
+}
+.rarr {
+    font-size: 20px;
+    margin: 0px;
+    position: absolute;
+    right: 7px;
 }
 
-#All-categorey {
-    border: none;
-    color: #336699;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bolder;
-    /* border: 1px solid red; */
-    padding-top: 10px;
-    padding-bottom: 0;
+.sub-menu-wrao {
+    position: absolute;
+    top: 9.3%;
+    /* right: 10%; */
+    width: 280px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
 }
+
+.sub-menu-wrao.open-menu {
+    max-height: 400px;
+}
+
+.sub-menu {
+    background: #c2c2c2;
+    padding: 10px;
+    margin: 10px;
+    /* border: 1px solid red; */
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+    /* border: 1px solid red; */
+}
+
+.user-info h2 {
+    font-weight: 500;
+    margin: 5px 0px;
+}
+
+.user-info img {
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.sub-menu hr {
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #000000;
+    margin: 10px 0 10px;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    margin: 12px 0;
+    /* border: 1px solid red; */
+}
+
+.sub-menu-link p {
+    width: 100%;
+    text-align: left;
+    font-weight: 300;
+}
+
+.sub-menu-link img {
+    width: 20px;
+    background: #e5e5e5;
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+}
+
+.sub-menu-link .sml {
+    font-size: 22px;
+    transition: transform 0.5s;
+}
+
+.sub-menu-link:hover .sml {
+    transform: translateX(5px);
+}
+
+.sub-menu-link:hover p {
+    font-weight: 600;
+}
+/* --------------------- */
+.phone{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* border: 1px solid aqua; */
+}
+
+.number a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.phone {
+    display: flex;
+    border-right: 1px solid #000000;
+    padding-right: 15px;
+}
+.phone-image {
+    /* border: 1px solid red; */
+    margin-right: 5px;
+}
+.phone-image:hover i{
+    transform: rotate()
+}
+.phone-wislist-compare-cart {
+    display: flex;
+    font-size: 15px;
+}
+.number p{
+    margin: 0px;
+    margin-bottom: 5px;
+}
+
+
+.wishlist-comare-cart {
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-weight: 600;
+}
+.wishlist-comare-cart i{
+    margin-bottom: 8px;
+}
+.phone-wislist-compare-cart a {
+    text-decoration: none;
+    color: #000000;
+}
+.compare {
+    text-align: center;
+    margin-left: 20px;
+    /* border: 1px solid red; */
+}
+
+.wishlist {
+    text-align: center;
+    margin-left: 20px;
+    /* border: 1px solid red; */
+}
+
+.cart {
+    text-align: center;
+    margin-left: 20px;
+    /* border: 1px solid red; */
+}
+.profile {
+    text-align: center;
+    margin-left: 20px;
+    /* border: 1px solid red; */
+}
+
+.sitelogo{
+    margin-right: 710px;
+}
+.sitelogo img{
+    width: 150px;
+}
+/* -------------- */
