--- a/style1.css
+++ b/style1.css
@@ -6,13 +6,15 @@
     /* border: 1px solid red; */
     /* padding: 25px; */
 }
-.header{
+
+.header {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0px 20px;
     background-color: #a3a3a3;
 }
+
 #circule {
     width: 4px;
     height: 4px;
@@ -101,6 +103,7 @@ form .fa-magnifying-glass {
     font-weight: 600;
     padding-top: 2px;
 }
+
 /* .navlinks{
     margin: 0px 20px;
 } */
@@ -168,12 +171,15 @@ form .fa-magnifying-glass {
     position: relative;
     transition: transform 0.5s;
 }
-.categorey-box a:hover .rarr{
+
+.categorey-box a:hover .rarr {
     transform: translateX(5px);
 }
-.categorey-box a:hover{
+
+.categorey-box a:hover {
     transform: scale(0.9);
 }
+
 .rarr {
     font-size: 20px;
     margin: 0px;
@@ -262,8 +268,9 @@ form .fa-magnifying-glass {
 .sub-menu-link:hover p {
     font-weight: 600;
 }
+
 /* --------------------- */
-.phone{
+.phone {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -283,18 +290,22 @@ form .fa-magnifying-glass {
     border-right: 1px solid #000000;
     padding-right: 15px;
 }
+
 .phone-image {
     /* border: 1px solid red; */
     margin-right: 5px;
 }
-.phone-image:hover i{
+
+.phone-image:hover i {
     transform: rotate()
 }
+
 .phone-wislist-compare-cart {
     display: flex;
     font-size: 15px;
 }
-.number p{
+
+.number p {
     margin: 0px;
     margin-bottom: 5px;
 }
@@ -308,13 +319,16 @@ form .fa-magnifying-glass {
     text-align: center;
     font-weight: 600;
 }
-.wishlist-comare-cart i{
+
+.wishlist-comare-cart i {
     margin-bottom: 8px;
 }
+
 .phone-wislist-compare-cart a {
     text-decoration: none;
     color: #000000;
 }
+
 .compare {
     text-align: center;
     margin-left: 20px;
@@ -332,16 +346,146 @@ form .fa-magnifying-glass {
     margin-left: 20px;
     /* border: 1px solid red; */
 }
+
 .profile {
     text-align: center;
     margin-left: 20px;
     /* border: 1px solid red; */
 }
 
-.sitelogo{
+.sitelogo {
     margin-right: 710px;
 }
-.sitelogo img{
+
+.sitelogo img {
     width: 150px;
 }
+
 /* -------------- */
+.mega-menu {
+    background: none repeat scroll 0 0 #888;
+    left: 0;
+    margin-top: 3px;
+    position: absolute;
+    width: 100%;
+    width: 1300px;
+    padding: 15px;
+    display: none;
+    transition-duration: 0.9s;
+}
+
+.mm-6column:after,
+.mm-6column:before,
+.mm-3column:after,
+.mm-3column:before {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.mm-6column,
+.mm-3column {
+    float: left;
+    position: relative;
+}
+
+.mm-3column {
+    margin: 0px 30px;
+}
+
+
+.left-images {
+    margin-right: 25px;
+}
+
+.left-images,
+.left-categories-list {
+    float: left;
+}
+
+.categories-list .li {
+    display: block;
+    line-height: normal;
+    margin: 10px 0px;
+    padding: 5px 0;
+    /* border: 1px solid  rgb(255, 0, 0); */
+}
+.categories-list ul{
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    margin: 0px;
+}
+.categories-list a {
+    list-style: none;
+    text-decoration: none;
+}
+.categories-list hr{
+    width: 100%;
+    height: 1px;
+    margin: auto;
+    border: 0;
+    background: #000000;
+}
+.left-images>p {
+    background: none repeat scroll 0 0 #ff7f50;
+    display: block;
+    font-size: 18px;
+    line-height: normal;
+    margin: 0;
+    padding: 5px 14px;
+}
+.left-images img{
+    width: 250px;
+}
+.categories-list .clspan {
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 5px;
+}
+
+.categories-list ul .li .mm-view-more{
+    transition: transform 0.5s;
+    background: none repeat scroll 0 0 #ff7f50;
+    color: #fff;
+    display: inline !important;
+    line-height: normal;
+    padding: 5px 8px !important;
+    margin: 0px;
+    list-style: none;
+    text-decoration: none;
+}
+
+/*Animation--*/
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+}
