--- a/style3.css
+++ b/style3.css
@@ -1,4 +1,4 @@
-.catagory-menu{
+/* .catagory-menu{
     width: 230px;
     display: flex;
     flex-direction: column;
@@ -33,4 +33,134 @@
     margin: 0px;
     position: absolute;
     right: 7px;
+} */
+.mega-menu {
+    background: none repeat scroll 0 0 #888;
+    /* left: 0; */
+    margin-top: 3px;
+    /* position: absolute; */
+    width: 1300px;
+    padding: 15px;
+    /* display: none; */
+    transition-duration: 0.9s;
+}
+
+.mm-6column:after,
+.mm-6column:before,
+.mm-3column:after,
+.mm-3column:before {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.mm-6column,
+.mm-3column {
+    float: left;
+    position: relative;
+}
+
+.mm-6column {
+    width: 50%;
+}
+
+.mm-3column {
+    width: 25%;
+}
+
+.responsive-img {
+    display: block;
+    max-width: 100%;
+}
+
+.responsive-img {
+    display: block;
+    max-width: 100%;
+
+}
+
+.left-images {
+    margin-right: 25px;
+}
+
+.left-images,
+.left-categories-list {
+    float: left;
+}
+
+.categories-list .li {
+    display: block;
+    line-height: normal;
+    margin: 0;
+    padding: 5px 0;
+
+}
+
+/* .categories-list a {
+    list-style: none;
+    text-decoration: none;
+} */
+
+/* .categories-list li :hover {
+    background: inherit !important;
+} */
+
+.left-images>p {
+    background: none repeat scroll 0 0 #ff7f50;
+    display: block;
+    font-size: 18px;
+    line-height: normal;
+    margin: 0;
+    padding: 5px 14px;
+}
+
+.categories-list .clspan {
+    font-size: 18px;
+    padding-bottom: 5px;
+    text-transform: uppercase;
+}
+
+.mm-view-more {
+    background: none repeat scroll 0 0 #ff7f50;
+    color: #fff;
+    display: inline !important;
+    line-height: normal;
+    padding: 5px 8px !important;
+    margin-top: 10px;
+    list-style: none;
+    text-decoration: none;
+}
+
+/*Animation--*/
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
 }
