--- a/style5.css
+++ b/style5.css
@@ -1,40 +1,66 @@
-.magamenu1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    border: 1px solid red;
-}
-.magamenu1-item1{
-    padding: 0px 20px;
-}
-.magamenu1-item1 h3{
-    font-size: 14px;
-    font-weight: bold;
-    padding: 0px;
-    margin: 10px 0px;
+
+.magamenu1 {
+    /* position: absolute; */
+    /* top: 120%; */
     width: 100%;
-    text-align: left;
+    /* opacity: 0; */
+    /* visibility: hidden; */
+    height: 300px;
+    /* left: 0px; */
+    /* transition: .3s; */
+    background:red;
+    /* backdrop-filter: blur(10px); */
+    display: flex;
+    z-index: 99;
+    border-bottom: 3px solid white;
+    border-radius: 0 0 15px 15px;
+}
+
+.magamenu1-item1 {
+    flex-basis: 23%;
+    margin: 1%;
+}
+
+.magamenu1-item1 a:hover {
+    padding-left: 5px;
+    color: #d9ff00;
+}
+
+.magamenu1-item1 a {
+    margin: 0px;
+    transition: .5s;
+    cursor: pointer;
+    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: rgb(255, 255, 255);
+    font-family: none;
     font-weight: 600;
-    color: #000000;
-}
-.magamenu1-item1 ul li a{
-    text-decoration: none;
-    padding: 10px;
     font-size: 15px;
-    font-weight: 300;
-    color: #686868;
-    transition: transform 0.5s;
-}
-.magamenu1-item1 ul li{
     text-decoration: none;
+    border: 1px solid black;
+}
+
+.magamenu1-item1 ul li {
+    margin: 0px;
     list-style: none;
-    margin: 10px 0px;
+    border: 1px solid black;
 }
-.magamenu1-item1 ul{
-    padding: 0px;
+
+.magamenu1-item1 h3 {
+    padding-top: 10px;
+    color: #d9ff00;
 }
-.magamenu1-item1 ul li a:hover{
-    transform: scale(0.9);
-    color: black;
+
+.magamenu1-item1 ul {
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
 }
+
+/* nav ul li:hover .magamenu1 {
+    opacity: 1;
+    visibility: visible;
+    top: 100%;
+    transition: all .3s ease-in;
+} */
