--- a/style.css
+++ b/style.css
@@ -19,55 +19,44 @@ body {
     height: 100vh;
 }
 
-.menu-icon span {
-    height: 4px;
-    width: 25px;
-    background-color: #000000;
-    display: inline-block;
-    display: flex;
-    flex-direction: column;
-    margin-top: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.logo {
-    text-decoration: none;
-    color: white;
-    /* margin-right: 400px; */
-    /* border: 1px solid rgb(0, 247, 255); */
-}
-
-.icon-part1 {
-    display: flex;
-    margin-left: 420px;
-}
-
-.menu-icon {
-    margin-right: 420px;
-}
-
-.wrapper {
-    width: 100%;
-    margin: 0 auto;
-    box-shadow: 0 5px 5px -5px #333;
-    position: relative;
-    display: flex;
-    /* background-color: #0b409c; */
-    justify-content: center;
-    background: rgb(6, 0, 101);
-    background: linear-gradient(90deg, rgba(6, 0, 101, 1) 0%, rgba(84, 9, 121, 1) 51%, rgba(0, 212, 255, 1) 100%);
-}
-
-.first-part {
-    width: 100%;
-    margin: 0 auto;
-    box-shadow: 0 5px 5px -5px #333;
+#navbar {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px;
-    background-color: #ffffff;
+    background-color: #FFE5CA;
+    padding: 8px 0px;
+    /* border: 1px solid red; */
+    /* padding: 25px; */
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px;
+    background-color: #df5333;
+}
+
+#circule {
+    width: 4px;
+    height: 4px;
+    background-color: #353535;
+    border-radius: 50%;
+    /* padding-top: 2px; */
+    margin-top: 2px;
+}
+
+#line {
+    width: 13px;
+    height: 2px;
+    background-color: #353535;
+    margin-top: 3px;
+    margin-left: 3px;
+    border-radius: 5px;
+}
+
+.dot-and-line {
+    display: flex;
 }
 
 .searchbar {
@@ -75,28 +64,33 @@ body {
     align-items: center;
     justify-content: center;
     margin-left: 10px;
-    /* border: 1px solid rgb(17, 0, 255); */
 }
 
 form {
-    background: #ffffff;
-    width: 600px;
+    background: whitesmoke;
+    width: 370px;
     height: 50px;
     display: flex;
+    border-radius: 30px;
+    border: 1px solid black;
 }
 
 form input {
     flex: 1;
     border: none;
     outline: none;
+    background-color: #f5f5f5;
 }
 
 form .searchbar-btn {
-    background: rgba(0, 212, 255, 1) 100%;
-    padding: 10px 50px;
-    border: none;
-    /* border: 3px solid rgb(0, 0, 0); */
+    background: #df5333;
+    /* background: rgb(245, 245, 245);
+    background: linear-gradient(90deg, rgba(245, 245, 245, 1) 0%, rgba(0, 212, 255, 1) 61%); */
+    padding: 10px 20px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
     outline: none;
+    border: none;
     color: rgb(0, 0, 0);
     letter-spacing: 1px;
     cursor: pointer;
@@ -110,173 +104,418 @@ form .fa-magnifying-glass {
     color: #000000;
 }
 
-.icon-part1 {
-    display: flex;
-    font-weight: 600;
+.down {
+    padding-left: 60px;
 }
 
-.track-and-deals .fa {
-    font-size: 22px;
-
-}
-.track, .deals {
-    padding-left: 15px;
+.down-fa {
+    padding-left: 5px;
 }
 
-.logo img {
-    width: 100px;
-}
-
-nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 0px;
-    font-family: 'Prompt', sans-serif;
-    font-weight: 600;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-}
-nav li {
-    padding: 8px 10px;
-}
-
-nav a {
+/* #navbar a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
-    font-weight: 300;
-    font-family: souptik;
-    font-size: 20px;
+    color: #353535;
 }
-.active{
-    background-color: rgba(248, 248, 255, 0);
+
+#navbar li {
+    list-style: none;
+} */
+
+.browser-catagorey-details {
+    padding-left: 8px;
+    font-weight: 600;
+    padding-top: 2px;
+
 }
-nav ul li:hover .catagory-menu {
+
+.browser-catagorey-details a {
+    text-decoration: none;
+    color: #353535;
+}
+
+.navlinks ul li {
+    padding: 20px 15px;
+    list-style: none;
+    position: relative;
+    cursor: pointer;
+}
+
+.navlinks ul li:hover {
+    background-color: #E74646;
+}
+
+.navlinks ul {
+    display: flex;
+    padding: 0px;
+    /* margin: 0px 47.5px; */
+}
+
+.navlinks ul li a {
+    text-decoration: none;
+    /* margin: 0px 15px; */
+    font-weight: 600;
+    color: #000000;
+}
+
+.browser-catagorey {
+    display: flex;
+    background-color: #FFE5CA;
+    padding: 18px 18px 18px 18px;
+    border-right: 1px solid black;
+    /* border: 1px solid #FFE5CA; */
+    cursor: pointer;
+    position: relative;
+}
+
+.browser-catagorey:hover>.categorey-box {
+    max-height: 451px;
     opacity: 1;
     visibility: visible;
-    top: 70px;
     transition: all .3s ease-in;
 }
-.catagory-menu{
-    width: 230px;
+
+.categorey-box {
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    margin-top: 47px;
+    /* height: 451px; */
+    width: 100%;
+    left: 0;
     display: flex;
     flex-direction: column;
-    background-color: rgb(255, 123, 0);
-    transition: 1s;
-    position: absolute;
     z-index: 99;
-    top: 90px;
-    left: 15px;
-    opacity: 0;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
     visibility: hidden;
+    opacity: 0;
+    transition: 1s;
 }
-.catagory-menu a{
-    padding: 15px;
-    cursor: pointer;
-    font-family: none;
-    background-color: rgb(255, 123, 0);
-    position: relative;
-    align-items: center;
-    text-align: center;
-    display: flex;
-    /* border-bottom: 1px solid whitesmoke; */
-    text-decoration: none;
-    color: aliceblue;
-    font-weight: 600;
+
+.categorey-box img {
+    width: 30px;
+    padding-right: 10px;
 }
-.catagory-menu a:hover{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-}
-.catagory-menu img{
-    width: 20px;
-    margin-right: 10px;
-}
-.na{
+
+.categorey-box a {
+    padding: 10px;
+    border-bottom: 1px solid #ececec;
+    color: #4a4a4a;
     font-size: 15px;
-    width: 15px;
+    font-weight: 700;
+    display: flex;
+    position: relative;
+    transition: transform 0.5s;
+    text-decoration: none;
 }
-.arr-style{
+
+.categorey-box a:hover .rarr {
+    transform: translateX(5px);
+}
+
+.categorey-box a:hover {
+    transform: scale(0.9);
+}
+
+.rarr {
+    font-size: 20px;
+    margin: 0px;
     position: absolute;
     right: 7px;
 }
-.menu-dot {
-    padding: 5px;
+
+.sub-menu-wrao {
+    position: absolute;
+    right: 0;
+    top: 7.4%;
+    z-index: 99;
+    /* right: 10%; */
+    width: 280px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+}
+
+.sub-menu-wrao.open-menu {
+    max-height: 400px;
+}
+
+.sub-menu {
+    /* border:2px solid #df5333 ; */
+    background: #efefef;
+    padding: 10px;
+    margin: 10px;
+    /* border: 1px solid red; */
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+    /* border: 1px solid red; */
+}
+
+.user-info h2 {
+    font-weight: 500;
+    margin: 5px 0px;
+}
+
+.user-info img {
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.sub-menu hr {
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #000000;
+    margin: 10px 0 10px;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    margin: 12px 0;
+    /* border: 1px solid red; */
+}
+
+.sub-menu-link p {
+    width: 100%;
+    text-align: left;
+    font-weight: 300;
+}
+
+.sub-menu-link .koko {
+    width: 30px;
+    background: #df5333;
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+    margin-bottom: 0px;
+}
+
+
+.sub-menu-link .sml {
+    font-size: 22px;
+    transition: transform 0.5s;
+}
+
+.sub-menu-link:hover .sml {
+    transform: translateX(5px);
+}
+
+.sub-menu-link:hover p {
+    font-weight: 600;
+}
+
+/* --------------------- */
+.phone {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    /* border: 1px solid aqua; */
 }
 
-#cat {
-    border-right: 1px solid grey;
-    margin-right: 20px;
-    margin-left: 0px;
-}
-
-.magamenu1 {
-    position: absolute;
-    top: 120%;
-    width: 100%;
-    opacity: 0;
-    visibility: hidden;
-    height: 300px;
-    left: 0px;
-    transition: .3s;
-    background: transparent;
-    backdrop-filter: blur(10px);
-    display: flex;
-    z-index: 99;
-    border-bottom: 3px solid white;
-    border-radius: 0 0 15px 15px;
-}
-
-.magamenu1-item1 {
-    flex-basis: 23%;
-    margin: 1%;
-}
-
-.magamenu1-item1 a:hover {
-    padding-left: 5px;
-    color: #d9ff00;
-}
-
-.magamenu1-item1 a {
-    margin: 0px;
-    transition: .5s;
-    cursor: pointer;
-    padding: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: rgb(255, 255, 255);
-    font-family: none;
-    font-weight: 600;
+.number a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
     font-size: 15px;
 }
 
-.magamenu1-item1 ul li {
-    margin: 0px;
-}
-
-.magamenu1-item1 h3 {
-    padding-top: 10px;
-    color: #d9ff00;
-}
-
-.magamenu1-item1 ul {
+.phone {
     display: flex;
-    flex-direction: column;
-    margin: 0px;
+    border-right: 1px solid #000000;
+    padding-right: 15px;
 }
 
-nav ul li:hover .magamenu1 {
+.phone-image {
+    /* border: 1px solid red; */
+    margin-right: 5px;
+}
+
+.phone-image:hover i {
+    transform: rotate()
+}
+
+.phone-wislist-compare-cart {
+    display: flex;
+    font-size: 15px;
+}
+
+.number p {
+    margin: 0px;
+    margin-bottom: 5px;
+}
+
+
+.wishlist-comare-cart {
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-weight: 600;
+}
+
+.wishlist-comare-cart i {
+    margin-bottom: 8px;
+}
+
+.phone-wislist-compare-cart a {
+    text-decoration: none;
+    color: #000000;
+}
+
+.compare {
+    text-align: center;
+    margin-left: 20px;
+    /* border: 1px solid red; */
+}
+
+.wishlist {
+    text-align: center;
+    margin-left: 20px;
+    /* border: 1px solid red; */
+}
+
+.cart {
+    text-align: center;
+    margin-left: 20px;
+    /* border: 1px solid red; */
+}
+
+.profile {
+    text-align: center;
+    margin-left: 20px;
+    /* border: 1px solid red; */
+}
+
+.sitelogo {
+    margin-right: 710px;
+}
+
+.sitelogo img {
+    width: 150px;
+}
+
+/* -------------- */
+.mega-menu {
+    border-top: 3px solid #E74646;
+    padding: 15px;
+    background: none repeat scroll 0 0 #FA9884;
+    margin-top: 20px;
+    position: absolute;
+    width: 1349px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+    transition-duration: 0.9s;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    z-index: 99;
+    right: 0px;
+    left: -483px;
+}
+
+.navlinks ul li:hover .mega-menu {
+    max-height: 315px;
     opacity: 1;
     visibility: visible;
-    top: 100%;
     transition: all .3s ease-in;
+}
+
+.mm-6column:after,
+.mm-6column:before,
+.mm-3column:after,
+.mm-3column:before {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.mm-6column,
+.mm-3column {
+    float: left;
+    position: relative;
+}
+
+.mm-3column {
+    margin: 0px 25px;
+}
+
+
+.left-images {
+    margin-right: 25px;
+}
+
+.left-images,
+.left-categories-list {
+    float: left;
+}
+
+.categories-list .li {
+    display: block;
+    line-height: normal;
+    margin: 10px 0px;
+    padding: 5px 0;
+    /* border: 1px solid  rgb(255, 0, 0); */
+}
+
+.categories-list ul {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    margin: 0px;
+}
+
+.categories-list a {
+    list-style: none;
+    text-decoration: none;
+}
+
+.categories-list hr {
+    width: 100%;
+    height: 1px;
+    margin: auto;
+    border: 0;
+    background: #000000;
+}
+
+.left-images>p {
+    background: none repeat scroll 0 0 #ff7f50;
+    display: block;
+    font-size: 18px;
+    line-height: normal;
+    margin: 0;
+    padding: 5px 14px;
+}
+
+.left-images img {
+    width: 250px;
+}
+
+.categories-list .clspan {
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 5px;
+}
+
+.categories-list ul .li .mm-view-more {
+    transition: transform 0.5s;
+    background: none repeat scroll 0 0 #ff7f50;
+    color: #fff;
+    display: inline !important;
+    line-height: normal;
+    padding: 5px 8px !important;
+    margin: 0px;
+    list-style: none;
+    text-decoration: none;
 }
 
 .un {
